manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-check-service
  namespace: health-check
spec:
  type: NodePort
  ports:
  - port: 3000
  selector:
    app: node-hello-world-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-hello-world-deployment
  namespace: health-check
  labels:
    app: node-hello-world-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-hello-world-app
  template:
    metadata:
      labels:
        app: node-hello-world-app
    spec:
      containers:
      - name: node-hello-world-app-container
        image: <aws_account_id>.dkr.ecr.<aws_region>.amazonaws.com/nodejs-hello-world
        imagePullPolicy: Always
        ports:
          - name: web
            containerPort: 3000
      imagePullSecrets:
          - name: regcred
